; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/pvrusb2/extr_pvrusb2-ctrl.c_pvr2_ctrl_get_mask.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/pvrusb2/extr_pvrusb2-ctrl.c_pvr2_ctrl_get_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pvr2_ctrl = type { %struct.TYPE_8__*, %struct.TYPE_7__* }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i64, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@pvr2_ctl_bitmask = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pvr2_ctrl_get_mask(%struct.pvr2_ctrl* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pvr2_ctrl*, align 8
  %4 = alloca i32, align 4
  store %struct.pvr2_ctrl* %0, %struct.pvr2_ctrl** %3, align 8
  store i32 0, i32* %4, align 4
  %5 = load %struct.pvr2_ctrl*, %struct.pvr2_ctrl** %3, align 8
  %6 = icmp ne %struct.pvr2_ctrl* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %40

8:                                                ; preds = %1
  %9 = load %struct.pvr2_ctrl*, %struct.pvr2_ctrl** %3, align 8
  %10 = getelementptr inbounds %struct.pvr2_ctrl, %struct.pvr2_ctrl* %9, i32 0, i32 0
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @LOCK_TAKE(i32 %13)
  br label %15

15:                                               ; preds = %8
  %16 = load %struct.pvr2_ctrl*, %struct.pvr2_ctrl** %3, align 8
  %17 = getelementptr inbounds %struct.pvr2_ctrl, %struct.pvr2_ctrl* %16, i32 0, i32 1
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @pvr2_ctl_bitmask, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %31

23:                                               ; preds = %15
  %24 = load %struct.pvr2_ctrl*, %struct.pvr2_ctrl** %3, align 8
  %25 = getelementptr inbounds %struct.pvr2_ctrl, %struct.pvr2_ctrl* %24, i32 0, i32 1
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 1
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %23, %15
  br label %32

32:                                               ; preds = %31
  %33 = load %struct.pvr2_ctrl*, %struct.pvr2_ctrl** %3, align 8
  %34 = getelementptr inbounds %struct.pvr2_ctrl, %struct.pvr2_ctrl* %33, i32 0, i32 0
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @LOCK_GIVE(i32 %37)
  %39 = load i32, i32* %4, align 4
  store i32 %39, i32* %2, align 4
  br label %40

40:                                               ; preds = %32, %7
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local i32 @LOCK_TAKE(i32) #1

declare dso_local i32 @LOCK_GIVE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
